# cppunit-example

./: CMakeLists.txt  README.md  build.sh
cmake_modules/: FindCppUnit.cmake
src/: CMakeLists.txt  calc.cc  calc.h
tests/: CMakeLists.txt  calc_test.cc  calc_test.h  test_runner.cc
